# lms-api

./: .dockerignore  .env.dev  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  traefik.prod.toml
accounts/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20210313_2014.py  0003_auto_20210313_2019.py  0004_auto_20210314_1235.py  0005_auto_20210316_1747.py  0006_instructorprofile_studentprofile.py  0007_auto_20210419_1608.py  0008_auto_20210430_0857.py  0009_studentgroup.py  0010_auto_20210612_1612.py  0011_auto_20210612_1909.py
api/: tests.py  urls.py  urls_v1.py  views.py
api/accounts/: filters.py  serializers.py  tests.py  views.py
api/common/: serializers.py  views.py
api/education/: filters.py  serializers.py  tests.py  views.py
api/management/: serializers.py  views.py
common/: models.py  permissions.py
config/: models.py  serializers.py  settings.py  urls.py  views.py
education/: models.py
education/migrations/: 0001_initial.py  0002_auto_20210517_1126.py  0003_auto_20210517_1131.py  0004_assignmentcontent_coursecontent_solutioncontent.py  0005_grade_value.py  0006_auto_20210521_2156.py  0007_auto_20210522_1202.py  0008_auto_20210612_1703.py
envs/: .env.db.dev  .env.dev  .env.example
lms_core/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
management/: models.py
nginx/: Dockerfile  nginx.conf
(+12 files in other folders)
